--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Goodbye</title>
+  </head>
+  <body>
     <% name = "Joe" %>
     <h1><%= "Goodbye " + name %></h1>
-  </head>
+  </body>
 </html>
