automatically backed up by learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -3,4 +3,8 @@
   <head>
     <title>date</title>
   </head>
+  <body>
+    <% Today = DateTime.now %>
+    <h1><%= Today %></h1>
+  </body>
 </html>
