--- a/views/date.erb
+++ b/views/date.erb
@@ -5,6 +5,6 @@
   </head>
   <body>
     <% Today = DateTime.now %>
-    <h1><%= Today %></h1>
+    <h1><%= "The date is" + Today %></h1>
   </body>
 </html>
