--- a/views/date.erb
+++ b/views/date.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>date</title>
+    <title>Date</title>
   </head>
   <body>
     <% Today = DateTime.now %>
