automatically backed up by learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -4,7 +4,10 @@
     <title>Date</title>
   </head>
   <body>
-    <% Today = DateTime.now %>
-    <h1><%= "The date is " + Today %></h1>
+    <% date = DateTime.now %>
+    <h1>Today</h1>
+    <p>
+      <%= "The date is " + date %>
+    </p>
   </body>
 </html>
