--- a/views/date.erb
+++ b/views/date.erb
@@ -7,7 +7,7 @@
     <% date = DateTime.now %>
     <h1>Today</h1>
     <p>
-      <%= "The date is " + date %>
+      <%= "The date is " + date.strftime("%d/%m/%Y %H:%M") %>
     </p>
   </body>
 </html>
